tests/diagnostic_golden/semantic_call_ambiguous_interfaces.diag
error[CF3116]: Ambiguous interfaces
  --> tests/diagnostic_golden/semantic_call_ambiguous_interfaces.f90:12:8
   = stage: semantic
   = help: see docs/errors.md#CF3116
   |
12 |   call foo(1)
   |        ^ call site conflicts here
  ::: tests/diagnostic_golden\semantic_call_ambiguous_interfaces.f90
  |
3 |     subroutine ext1(x)
  |     ~~~~~~~~~~~~~~ conflicting visible generic specific here
  |
8 |     subroutine ext2(y)
  |     ~~~~~~~~~~~~~~ conflicting visible generic specific here
   = note: visible generic interface specifics are indistinguishable for this call
   = help: make one specific distinguishable by required dummy arguments or avoid importing conflicting generic interfaces
